# kimojio-rs

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: doc.yml  rust.yml
examples/: Cargo.toml  tcp-echo-server.md
examples/copyfile/: Cargo.toml
examples/copyfile/src/: main.rs
examples/tls-echo-server/src/: main.rs
kimojio/: Cargo.toml  build.rs
kimojio-macros/: Cargo.toml
kimojio-macros/src/: lib.rs
kimojio-tests/: Cargo.toml  README.md
kimojio-tests/src/: lib.rs
kimojio-tests/tests/: hyper_http1.rs  stream_echo.rs
kimojio-tls/: Cargo.toml  build.rs
kimojio-tls/src/: lib.rs  openssl_stream.c
kimojio-util/: Cargo.toml  DESIGN.md  README.md
kimojio-util/src/: lib.rs  stream_adapt.rs
kimojio/benches/: async_bench.rs  async_stream_bench.rs  iouring.rs  mut_in_place_cell_bench.rs
kimojio/src/: async_channel.rs  async_event.rs  async_lock.rs  async_oneshot.rs  async_reader_writer_lock.rs  async_semaphore.rs  async_stream.rs  buffer_pipe.rs  cancellation_token.rs  configuration.rs  epoll_future.rs  errors.rs  handle_table.rs  io_type.rs  iocp_future.rs  lib.rs  message_pipe.rs  mut_in_place_cell.rs  operations.rs  pipe.rs  pointer_buffer.rs  prefix_buffer.rs  ring_future.rs  runtime.rs  runtime_handle.rs  socket_helpers.rs  task.rs  task_pool.rs  task_ref.rs  task_state_cell.rs  timer.rs  tlscontext.rs  tlsstream.rs  tracing.rs  uring_stats.rs  virtual_clock.rs
kimojio/src/backend/: epoll.rs  io_uring.rs  iocp.rs  mod.rs  select_driver.rs
kimojio/src/ssl2/: e2e_tests.rs  io.rs  mod.rs
