[package]
name = "kimojio-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Kimojio OpenSSL integration"

[dependencies]
openssl-sys.workspace = true
rustix-uring.workspace = true

[dev-dependencies]
foreign-types-shared.workspace = true
openssl.workspace = true
static_assertions.workspace = true
