[package]
name = "kimojio"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "A thread-per-core async runtime optimized for latency, with io_uring on Linux and epoll/IOCP as alternatives."

[lints.rust]
# async_fn_in_trait can be a problem for public traits that
# might need to return impl Future that is + Send. Since we
# do not require Send futures, so we can allow async_fn_in_trait.
async_fn_in_trait = "allow"

[dependencies]
foreign-types-shared.workspace = true
futures.workspace = true
impls.workspace = true
intrusive-collections.workspace = true
kimojio-macros.workspace = true
kimojio-tls = { workspace = true, optional = true }
libc.workspace = true
openssl = { workspace = true, optional = true }
pin-project-lite.workspace = true
rustix.workspace = true
scopeguard.workspace = true
static_assertions.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rustix-uring = { version = "0.6", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_IO", "Win32_System_Threading", "Win32_Networking_WinSock"], optional = true }

[features]
default = ["tls", "io_uring"]
# Enable TLS/OpenSSL support
tls = ["dep:openssl", "dep:kimojio-tls"]
# Enable the io_uring backend (default on Linux). Requires kernel 5.15+.
# Disable in favour of "epoll" for containers that restrict io_uring via seccomp.
io_uring = ["dep:rustix-uring"]
# Enable the epoll backend (Linux only). Useful in containers where io_uring
# is unavailable. Mutually exclusive with "io_uring".
epoll = []
# Enable IoUring feature which optimizes the uring hot path at the tradeoff of
# requiring the same thread to call io_uring_enter() exclusively, the ring
# cannot be shared across threads. Requires Linux 6.0 or later.
setup_single_issuer = []
# Enable support for io_uring_cmd to send direct NVMe commands to devices.
# This requires using 128 byte SQEs and 32 byte CQEs that encapsulate the
# underlying NVMe SQE and CQEs
io_uring_cmd = []
# Enable the Windows IOCP backend (Windows only). Skeleton only; full
# implementation is future work.  Mutually exclusive with "io_uring" and "epoll".
windows-iocp = ["dep:windows-sys"]
noencrypt = []
enter_stats = []
fault_injection = []
# Enable virtual clock for deterministic test timing
virtual-clock = []
# Temporary feature for ssl2
ssl2 = ["tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
criterion.workspace = true
rcgen.workspace = true
tempfile.workspace = true

[[bench]]
name = "iouring"
harness = false

[[bench]]
name = "mut_in_place_cell_bench"
harness = false

[[bench]]
name = "async_bench"
harness = false

[[bench]]
name = "async_stream_bench"
harness = false
